# rag-customer-support-chatbot

./: .gitignore  LICENSE  app.py  build.sh  build_index.py  config.py  deckerfile  faq.json  faq_meta.json  fixed_conversation_demo.md  gunicorn.conf.py  pyproject.toml  quick_test.py  rag_pipeline.py  readme.md  render.yaml  requirements-fallback.txt  requirements.txt  sample_conversations.md  task.md  test_final_rag.py  test_fixes.py  test_helpful_bot.py  test_more_details.py  test_rag_system.py
static/: script.js  style.css
templates/: index.html
